--- a/src/scss/_LayoutListInline.scss
+++ b/src/scss/_LayoutListInline.scss
@@ -22,7 +22,6 @@
 	}
 
 	// vertical align
-	&--vertical-align-default > &__wrapper,
 	&--vertical-align-top > &__wrapper {
 		align-items: flex-start;
 	}
@@ -32,9 +31,11 @@
 	&--vertical-align-bottom > &__wrapper {
 		align-items: flex-end;
 	}
+	&--vertical-align-default > &__wrapper,
 	&--vertical-align-stretch > &__wrapper {
 		align-items: stretch;
 	}
+	&--vertical-align-default > &__wrapper > &__item,
 	&--vertical-align-stretch > &__wrapper > &__item {
 		@include content-fill-height(auto);
 	}
